# ScandiNLI

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
config/: config.yaml
config/dataset/: da.yaml  nb.yaml  scandi.yaml  sv.yaml
config/model/: ai-sweden-roberta-large.yaml  electra-small-nordic.yaml  mdeberta-v3-base.yaml  mdeberta_v3_base.yaml  nb-bert-base.yaml  nb-bert-large-da.yaml  nb-bert-large-nb.yaml  nb-bert-large-sv.yaml  nb-bert-large.yaml  nb_bert_base.yaml  nb_bert_large.yaml  scandibert.yaml  xlm-roberta-base.yaml  xlm-roberta-large.yaml
src/scandinli/: __init__.py  build_data.py  data.py  evaluate.py  evaluation.py  train.py  training.py
src/scripts/: build_danfever.py  build_data.py  evaluate.py  fix_dot_env_file.py  train.py  versioning.py
tests/: __init__.py  conftest.py  test_build_data.py  test_train.py
